--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,6 @@ and open the template in the editor.
     Author     : emorozov
 */
 
-/*html {
-    height: 100%;
-}
-
-*/
-
 html { font-size:100%; }
 
 body {
@@ -32,49 +26,41 @@ body {
 
 }
 
+
 /*-- HEADER --*/
         
 header {
-    
-    
     position: relative;
-    width: 100%;
     height: auto;
-    margin: 0 0 2% 0;
-    
-    
-/*    border-bottom: 1px solid #e74c3c;*/
+    border-bottom: 1px solid #f28277;
 }
     
-    .brand {
+    .product {
         display: inline-block;
-        width: 79%;
-        font-size: 1.3rem;
-        height: 40px;
-        color: #ffffff;
-/*        padding: 15px 0 0 2%;*/
+        color: #f28277;
         text-decoration: none;
+        text-align: center;
+        width: 100%;
     }
-    
-        .brand:hover {
-            color: #e74c3c;
-        }
     
     .phone-company {
         display: inline-block;
-        width: 10%;
+        width: 100%; 
         color: #ffffff;
-        font-size: 100%;
-        
+        text-align: center;
     }
     
     .mail-company {
-        text-decoration: none;
         display: inline-block;
-        width: 10%;
+        width: 100%; 
         color: #ffffff;
+        text-decoration: none;
+        text-align: center;
     }
-        
+
+        .mail-company:hover {
+            color: #f28277;
+        }
 
 /*-- END HEADER --*/
 
@@ -82,9 +68,28 @@ header {
 
 .wrapper {
     position: relative;
-    width: 100%;
+/*    width: 100%;*/
     padding: 0 0 70px 0;
-}                                
+}
+
+.wrapper-section-content {
+    width: 100%;
+    margin: 40px 0 0 0;
+    
+}
+
+    /*-- FEATURES AND CAROUSEL BLOCKS --*/
+    
+    .block-features {
+        color: #ffffff;
+    }
+    
+    .block-carousel {
+        color: #ffffff;
+    }
+    
+    /*-- END FEATURES AND CAROUSEL BLOCKS--*/
+    
                                 
 /*-- END MAIN CONTAINER --*/   
                                 
@@ -109,48 +114,23 @@ footer {
     }
     
         footer > a:hover {
-            color: #e74c3c;
+            color: #f28277;
         }
                                 
 /*-- END FOOTER --*/   
 
     @media only screen and (max-width: 1920px) {
         
-        body {font-size:10px; font-size:1rem;}
-        .navbar-brand {font-size:13px; font-size:1.3rem;}
+        .product {font-size:11px; font-size:1.1rem;}
         
     }
-     
-    @media only screen and (max-width: 768px) {
-        
-        body {font-size:9px; font-size:0.9em;}
-        .navbar-brand {font-size:12px; font-size:1.2rem;}
-        
-    }
-    
+
     @media only screen and (max-width: 480px) {
         
-        body {font-size:8px; font-size:0.8em;}
-        .navbar-brand {font-size:11px; font-size:1.1rem;}
+        .product {font-size:10px; font-size:1rem;}
         
     }
-    
-/*    @media only screen and (min-width: 480px) {
-        
-        body {font-size:9px; font-size:0.9em;}
-        
-    }*/
-        
-    
-    
 
-/*@media (max-width: 640px) { body {font-size:1.2rem;} }
-
- @media (min-width: 640px) { body {font-size:1rem;} } 
-
-@media (min-width:960px) { body {font-size:1.2rem;} }
-
- @media (min-width:1100px) { body {font-size:1.5rem;} } */
 
 
     
