--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,11 @@ p {
 /*-- HEADER --*/
         
 header {
-    position: relative;
+    position: fixed;
     height: auto;
     border-bottom: 1px solid #ee5747;
+    width: 100%;
+    z-index: 9999;
 }
     
     .product {
@@ -105,7 +107,7 @@ header {
 
 .wrapper {
     position: relative;
-    padding: 0 0 70px 0;
+    padding: 3% 0 70px 0;
 }
 
 .wrapper-section-content {
@@ -221,6 +223,93 @@ header {
             }
     
     /*-- END THE RANGE OF PRODUCTS BLOCK --*/
+    
+    /*-- ABOUT COMPANY BLOCK --*/
+    
+    .about-company-block {
+        padding: 14px;
+    }
+    
+    /*-- END ABOUT COMPANY BLOCK --*/
+    
+    /*-- ABOUT COMPANY BLOCK --*/
+    
+    .quality-certificates-block {
+        padding: 14px;
+    }
+    
+    .description-standart {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+        color: #333333;
+        line-height: 1.3;
+    }
+    
+    /*-- END ABOUT COMPANY BLOCK --*/
+    
+    /*-- REVIEWS BLOCK --*/
+    
+    .reviews-block {
+        padding: 14px;
+    }
+
+    .wrapp-div-for-review {
+        display: inline-block;
+        width: 100%;
+        border-left: 5px solid #ee5747;
+    }
+    
+        .wrapp-div-for-review > p {
+            padding: 0 15px 15px 15px;
+        }
+
+        .wrapp-div-for-review > span {
+            display: inline-block;
+            width: 90%;
+            padding: 0 0 0 15px;
+            line-height: 1.3;
+            font-size: 85%;
+        }
+    
+    /*-- END REVIEWS BLOCK --*/
+    
+    /*-- TERMS OF COOPERATION --*/
+    
+    .terms-of-cooperation-block {
+        padding: 14px;
+    }
+
+    .wrapp-div-for-term {
+        display: inline-block;
+        width: 100%;
+    }
+
+        .wrapp-div-for-term > h2 {
+            color: #333333;
+            margin-bottom: 20px;
+            font-size: 20px;
+            font-weight: 200;
+            line-height: 30px;
+        }
+
+        .wrapp-div-for-term > p {
+            color: #333333;
+        }
+        
+        .link-version {
+            text-decoration: none;
+            color: #ee5747;
+        }
+        
+            .link-version:hover {
+                color: #a43b30;
+/*                text-decoration: underline;*/
+            }
+
+
+    /*-- END TERMS OF COOPERATION --*/
+
                                 
 /*-- END MAIN CONTAINER --*/   
                                 
