--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,39 @@ a:hover {
     text-decoration: underline;
 }
 
+#sub_layer {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index: 9998;
+    padding: 0;
+    margin: 0;
+    opacity: 0.5;
+    display: block;
+}
+
+/*-- FORM FEEDBACK --*/
+
+#wrapp_form_feedback {
+    position: fixed; 
+    background-color: #ffffff;
+    color: #333333;
+    z-index: 9999;
+    display: block;
+    
+    height: auto; 
+    left: 50%;  
+    top: 15%;
+    overflow: auto;
+    padding: 1%;
+}
+
+
+
+/*-- END FORM FEEDBACK --*/
+
+
 
 /*-- HEADER --*/
         
@@ -78,7 +111,7 @@ header {
     height: auto;
     border-bottom: 1px solid #ee5747;
     width: 100%;
-    z-index: 9999;
+    z-index: 9997;
 }
     
     .product {
@@ -318,7 +351,7 @@ footer {
     height: 50px;
     width: 100%;
     border-top: 1px solid #ee5747;
-    z-index: 9999;
+    z-index: 9997;
 }
 
     footer > a {
@@ -337,6 +370,11 @@ footer {
     h1, .h1-version {font-size:30px; font-size:3rem;}
 
     /*-- HEADER --*/
+    
+    #wrapp_form_feedback {
+        width: 45%; 
+        margin-left: -22%;  
+    }
 
     .product {font-size:11px; font-size:1.1rem;}
 
@@ -376,6 +414,15 @@ footer {
     h1, .h1-version {font-size:17px; font-size:1.7rem;}
 
     p {font-size:7px; font-size:0.7rem;}
+    
+    /*-- FORM FEEDBACK --*/
+
+    #wrapp_form_feedback {
+        width: 55%; 
+        margin-left: -27%;  
+    }
+
+    /*-- END FORM FEEDBACK --*/
 
 
     /*-- HEADER --*/
@@ -435,6 +482,16 @@ footer {
     h1, .h1-version {font-size:11px; font-size:1.1rem;}
 
     p {font-size:6px; font-size:0.6rem;}
+    
+    /*-- FORM FEEDBACK --*/
+
+    #wrapp_form_feedback {
+        width: 65%; 
+        margin-left: -32%;  
+    }
+
+    /*-- END FORM FEEDBACK --*/
+
 
     /*-- HEADER --*/
 
